dev/test_programs/INVALID/group1/stmt2.go
package main;

func main(){
	var x int;
	var y int;
	x, y = 1, 2, 3;
}
